# mcp-metricflow

./: .env.template  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci-pr.yml  pypi-publish.yml
docs/jaffle-shop-setup/: Dockerfile  README.md  docker-compose.yml
src/: __init__.py  main_sse.py
src/server/: sse_server.py
tests/config/: test_config.py
tests/server/: test_auth.py  test_sse_server.py  test_sse_server_direct.py
